server::starts js

--- a/PiCar/Tests/index.html
+++ b/PiCar/Tests/index.html
@@ -1,1 +1,16 @@
-<h2> Welcome !</h2>
+<!doctype html>
+
+<html>
+    <head>
+        <title>CS4710 Senior Project</title>
+        <script type="text/javascript" src="main.js"></script>
+    </head>
+    <body>
+        <h1>PiCar Project</h1>
+        <p id="controller">            
+        </p>
+    </body>
+</html>
+
+
+
