server::server changes

--- a/PiCar/Tests/index.html
+++ b/PiCar/Tests/index.html
@@ -7,8 +7,9 @@
     </head>
     <body>
         <h1>PiCar Project</h1>
-        <p id="controller">            
-        </p>
+        <div id="controller" style="width:50%; text-align: center; margin: auto">
+            <span style="font-size:2em;border: 2px solid gray; color: gray" id="status">Up|Down|Left|Right</span>   
+        </div>
     </body>
 </html>
 
