server::completes ajax communication

--- a/PiCar/Tests/index.html
+++ b/PiCar/Tests/index.html
@@ -8,7 +8,8 @@
     <body>
         <h1>PiCar Project</h1>
         <div id="controller" style="width:50%; text-align: center; margin: auto">
-            <span style="font-size:2em;border: 2px solid gray; color: gray" id="status">Up|Down|Left|Right</span>   
+            <p style="font-size:2em;border: 2px solid gray; color: gray" id="status">Up|Down|Left|Right</p>
+            <p style="font-size:2em;border: 2px solid gray; color: gray" id="response">Up|Down|Left|Right</p>   
         </div>
     </body>
 </html>
