--- a/PiCar/Tests/index.html
+++ b/PiCar/Tests/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <h1>PiCar Project</h1>
-        <div id="controller" style="width:50%; text-align: center; margin: auto">
-            <p style="font-size:2em;border: 2px solid gray; color: gray" id="status">Up|Down|Left|Right</p>
+        <div id="controller" style="width:90%; margin: auto">
+            <p style="margin:auto; width: 60%; font-size:2em;border: 2px solid gray; color: gray; text-align: center; " id="status">Up|Down|Left|Right</p>
             <p style="font-size:2em;border: 2px solid gray; color: gray" id="response">Up|Down|Left|Right</p>   
         </div>
     </body>
